--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,16 @@
   }
 }
 
+/* @font-face {
+  font-family: 'NanumSquare';
+  src: url("../assets/font//NanumSquareB.woff2") format("woff2"),
+       url("../assets/font//NanumSquareB.woff") format("woff"),
+       url("../assets/font//NanumSquareB.ttf") format("truetype");
+  font-display: block;
+} */
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: NanumSquareB;
 }
